k8s/vuganacar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuganacar-service
  namespace: vuganacar
spec:
  type: NodePort
  selector:
    app: vuganacar
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30082
