k8s/vuganacar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vuganacar-ingress
  namespace: vuganacar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: vuganacar.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vuganacar-service
                port:
                  number: 80
